Aprendendo sobre clusterização, falta ultimo modulo

--- a/Classificação/projects.ipynb
+++ b/Classificação/projects.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "4               0              2.0    202.000000"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
        "4           1              2.0    202.000000"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "<Axes: xlabel='horas_esperadas', ylabel='preco'>"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "<Axes: xlabel='horas_esperadas', ylabel='preco'>"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -270,16 +270,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x2a5108e3490>"
+       "<seaborn.axisgrid.FacetGrid at 0x1dce91e4520>"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "[2157 rows x 3 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -570,16 +570,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2a510a335e0>"
+       "<matplotlib.collections.PathCollection at 0x1dcea3b0490>"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
