--- a/Regressao_Linear/Atividades/hoteis.ipynb
+++ b/Regressao_Linear/Atividades/hoteis.ipynb
@@ -273,7 +273,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1ccb52734f0>"
+       "<seaborn.axisgrid.PairGrid at 0x210d7697340>"
       ]
      },
      "execution_count": 7,
@@ -516,8 +516,8 @@
       "Dep. Variable:                  Preco   R-squared:                       0.255\n",
       "Model:                            OLS   Adj. R-squared:                  0.254\n",
       "Method:                 Least Squares   F-statistic:                     234.5\n",
-      "Date:                Sun, 10 Nov 2024   Prob (F-statistic):           9.57e-46\n",
-      "Time:                        22:16:56   Log-Likelihood:                -4357.8\n",
+      "Date:                Thu, 14 Nov 2024   Prob (F-statistic):           9.57e-46\n",
+      "Time:                        12:58:47   Log-Likelihood:                -4357.8\n",
       "No. Observations:                 688   AIC:                             8720.\n",
       "Df Residuals:                     686   BIC:                             8729.\n",
       "Df Model:                           1                                         \n",
@@ -564,8 +564,8 @@
       "Dep. Variable:                  Preco   R-squared:                       0.912\n",
       "Model:                            OLS   Adj. R-squared:                  0.912\n",
       "Method:                 Least Squares   F-statistic:                     2360.\n",
-      "Date:                Sun, 10 Nov 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        22:16:56   Log-Likelihood:                -3623.3\n",
+      "Date:                Thu, 14 Nov 2024   Prob (F-statistic):               0.00\n",
+      "Time:                        12:58:47   Log-Likelihood:                -3623.3\n",
       "No. Observations:                 688   AIC:                             7255.\n",
       "Df Residuals:                     684   BIC:                             7273.\n",
       "Df Model:                           3                                         \n",
@@ -609,8 +609,8 @@
       "Dep. Variable:                  Preco   R-squared:                       0.912\n",
       "Model:                            OLS   Adj. R-squared:                  0.912\n",
       "Method:                 Least Squares   F-statistic:                     2360.\n",
-      "Date:                Sun, 10 Nov 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        22:16:56   Log-Likelihood:                -3623.3\n",
+      "Date:                Thu, 14 Nov 2024   Prob (F-statistic):               0.00\n",
+      "Time:                        12:58:48   Log-Likelihood:                -3623.3\n",
       "No. Observations:                 688   AIC:                             7255.\n",
       "Df Residuals:                     684   BIC:                             7273.\n",
       "Df Model:                           3                                         \n",
