aprendendo validacao cruzada

--- a/Classificação/preco_carros_baseline_validacao_cruzada.ipynb
+++ b/Classificação/preco_carros_baseline_validacao_cruzada.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Neste projeto iremos analisar o conjunto de dados sobre preços de carros."
+    "Neste projeto iremos analisar o conjunto de dados sobre preços de carros.\n",
+    "\n",
+    "Em seguida, iremos avaliar a performance do nosso modelo utilizando metodologias de treino e teste Hold Out e Validação Cruzada."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +90,7 @@
        "4            7935           2014  117384.68        1"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -221,13 +223,13 @@
        "4            7935           2014  117384.68        1  12770.144640"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "COEFFICIENT = 1.609344\n",
+    "COEFFICIENT = 1.609344 # Conversão de milhas para ano\n",
     "df['km_por_ano'] = df['milhas_por_ano'].apply(lambda x: x * COEFFICIENT)\n",
     "df.head()"
    ]
@@ -241,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +341,7 @@
        "4           10  "
       ]
      },
-     "execution_count": 195,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +493,7 @@
        "[10000 rows x 4 columns]"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +505,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Disponibilizar a nova planilha em csv\n",
+    "df.to_csv('preco_carros.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +528,9 @@
     "X = df.drop('vendido', axis=1)\n",
     "y = df['vendido']\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=42)\n",
+    "SEED = 42\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=SEED)\n",
     "\n",
     "X_train_scaled = sc.fit_transform(X_train)\n",
     "X_test_scaled = sc.transform(X_test)"
@@ -541,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +571,7 @@
        "0.58"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +713,7 @@
        " Text(0.9230769230769231, 0.125, 'gini = 0.423\\nsamples = 244\\nvalue = [74, 170]\\nclass = sim')]"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -723,6 +737,50 @@
     "          rounded=True,\n",
     "          feature_names=X.columns, # Ao invés dos índices das colunas, aparecerá os nomes de cada coluna\n",
     "          class_names=['não', 'sim']) # Ao invés de true e false, aparecerá sim e não"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Validação cruzada\n",
+    "\n",
+    "Até o momento utilizamos a metodologia **Hold Out** para realizar o treino e teste do nosso modelo. O que isto significa?\n",
+    "\n",
+    "**Hold Out**\n",
+    "- É o ato de dividir os dados de treino e testes apenas uma vez, baseado em um número de seed (no caso, o **random_state** do método *train_test_split*).\n",
+    "- Porém utilizando este método, podemos estar suscetível à aleatoriedade, pois caso mudarmos o número do seed, as métricas de performance do nosso modelo podem ser diferentes, tanto pra melhor ou pior.\n",
+    "- Este não é um cenário ideal, e para resolver isto, podemos utilizar a metodolodia da **Validação Cruzada**.\n",
+    "\n",
+    "**K-fold (Validação Cruzada)**\n",
+    "- Trata-se de dividir os dados em **k** partes para fazer a validação cruzada, onde ao final, será tirado a média das métricas (por exemplo, acurácia) para validar a performance do modelo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.742, 0.77 , 0.749, 0.764, 0.761, 0.764, 0.754, 0.755, 0.759,\n",
+       "       0.76 ])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_validate\n",
+    "\n",
+    "dt_model = DecisionTreeClassifier(max_depth=2)\n",
+    "\n",
+    "# Validação cruzada\n",
+    "results = cross_validate(dt_model, X, y, cv=3)\n",
+    "results['test_score']"
    ]
   }
  ],
