--- a/Classificação/FIAP_Aulas/Atividade_Fase4/seeds_classifier.ipynb
+++ b/Classificação/FIAP_Aulas/Atividade_Fase4/seeds_classifier.ipynb
@@ -735,7 +735,9 @@
     "\n",
     "Pelo fato dos algorítmos de *Árvore de Decisão* e *Floresta aleatória* poderem envolver componentes aleatórios no processo de treino, como a ordem das amostras ou o processo de divisão por nós. Por mais que definimos um *random_state* no processo de split dos dados nos algoritmos mencionados, é importante considerarmos que estamos lidando com aleatoriedade na hora do teste e treinamento.\n",
     "\n",
-    "Para garantirmos uma maior estabilidade das métricas no processo de treino e teste, podemos considerar realizar uma **validação cruzada** em sequência de um algorítmo de busca de melhores hiperparâmetros."
+    "Para garantirmos uma maior estabilidade das métricas no processo de treino e teste, podemos considerar realizar uma **validação cruzada** em sequência de um algorítmo de busca de melhores hiperparâmetros.\n",
+    "\n",
+    "Iremos realizar isto pois fazendo apenas um treino e um teste, podemos estar correndo o risco de estarmos sendo muito otimistas em relação a performance do nosso modelo"
    ]
   },
   {
@@ -771,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,12 +830,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Floresta Aleatória** (Este algoritmo demora um pouco mais)"
+    "**Floresta Aleatória**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +866,7 @@
     "}\n",
     "\n",
     "model = Model_ML(pipeline,\n",
-    "                 StratifiedShuffleSplit(n_splits=10),\n",
+    "                 StratifiedShuffleSplit(n_splits=5, random_state=SEED),\n",
     "                 params,\n",
     "                 X, y)\n",
     "\n",
@@ -885,15 +887,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia Médio: 90.95%\n",
-      "Intervalo: 81.01% // 100.90\n"
+      "Acurácia Médio: 91.43%\n",
+      "Intervalo: 83.13% // 99.73\n"
      ]
     }
    ],
@@ -909,7 +911,7 @@
     "}\n",
     "\n",
     "model = Model_ML(pipeline,\n",
-    "                 StratifiedShuffleSplit(n_splits=10),\n",
+    "                 StratifiedShuffleSplit(n_splits=10, random_state=SEED),\n",
     "                 params,\n",
     "                 X, y)\n",
     "\n",
@@ -930,15 +932,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia Médio: 94.29%\n",
-      "Intervalo: 84.03% // 104.54\n"
+      "Acurácia Médio: 92.38%\n",
+      "Intervalo: 81.78% // 102.99\n"
      ]
     }
    ],
@@ -955,7 +957,7 @@
     "}\n",
     "\n",
     "model = Model_ML(pipeline,\n",
-    "                 StratifiedShuffleSplit(n_splits=10),\n",
+    "                 StratifiedShuffleSplit(n_splits=10, random_state=SEED),\n",
     "                 params,\n",
     "                 X, y)\n",
     "\n",
@@ -976,15 +978,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Acurácia Médio: 91.43%\n",
-      "Intervalo: 82.10% // 100.76\n"
+      "Acurácia Médio: 92.38%\n",
+      "Intervalo: 83.65% // 101.11\n"
      ]
     }
    ],
@@ -1004,7 +1006,7 @@
     "}\n",
     "\n",
     "model = Model_ML(pipeline,\n",
-    "                 StratifiedShuffleSplit(n_splits=10),\n",
+    "                 StratifiedShuffleSplit(n_splits=10, random_state=SEED),\n",
     "                 params,\n",
     "                 X, y)\n",
     "\n",
