--- a/Classificação/FIAP_Aulas/Atividade_Fase4/seeds_classifier.ipynb
+++ b/Classificação/FIAP_Aulas/Atividade_Fase4/seeds_classifier.ipynb
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
      "output_type": "stream",
      "text": [
       "Acurácia Médio: 92.38%\n",
-      "Intervalo: 84.76% // 100.00\n"
+      "Intervalo: 82.67% // 102.09\n"
      ]
     }
    ],
@@ -866,7 +866,7 @@
     "}\n",
     "\n",
     "model = Model_ML(pipeline,\n",
-    "                 StratifiedShuffleSplit(n_splits=5, random_state=SEED),\n",
+    "                 StratifiedShuffleSplit(n_splits=5, random_state=SEED), # random_state para garantir a reprodutibilidade da divisão dos dados\n",
     "                 params,\n",
     "                 X, y)\n",
     "\n",
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
