Considerando o peso das palavras (importancia) e capturando contextos com tf-idf e n-grams

--- a/Processamento_Linguagem_Natural/Analise_sentimento/analise_sentimentos.ipynb
+++ b/Processamento_Linguagem_Natural/Analise_sentimento/analise_sentimentos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -93,22 +93,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   ID_avaliacao                                          avaliacao  nota  \\\n",
-       "0         81841  Esse smartphone superou minhas expectativas, r...     5   \n",
-       "1         28031  o cheiro e muito desagradavel!! pra quem se in...     2   \n",
-       "2         91332  Eu fiz a compra a loja não entregou o produto,...     1   \n",
-       "3        110045  Atendeu minhas expectativas, só achei a luz ru...     4   \n",
-       "4         36929  Gostei muito, só achei que ficou a desejar a q...     5   \n",
+       "   ID_avaliacao  ... sentimento\n",
+       "0         81841  ...   positivo\n",
+       "1         28031  ...   negativo\n",
+       "2         91332  ...   negativo\n",
+       "3        110045  ...   positivo\n",
+       "4         36929  ...   positivo\n",
        "\n",
-       "  sentimento  \n",
-       "0   positivo  \n",
-       "1   negativo  \n",
-       "2   negativo  \n",
-       "3   positivo  \n",
-       "4   positivo  "
+       "[5 rows x 4 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -209,22 +204,17 @@
        "</div>"
       ],
       "text/plain": [
-       "   ID_avaliacao                                          avaliacao  nota  \\\n",
-       "0         81841  Esse smartphone superou minhas expectativas, r...     5   \n",
-       "1         28031  o cheiro e muito desagradavel!! pra quem se in...     2   \n",
-       "2         91332  Eu fiz a compra a loja não entregou o produto,...     1   \n",
-       "3        110045  Atendeu minhas expectativas, só achei a luz ru...     4   \n",
-       "4         36929  Gostei muito, só achei que ficou a desejar a q...     5   \n",
+       "   ID_avaliacao  ...                                      frase_tratada\n",
+       "0         81841  ...                       smartphon super expect recom\n",
+       "1         28031  ...              cheir desagrada pra incomod recomendo\n",
+       "2         91332  ...  fiz compr loj entreg produt compr feit carta c...\n",
+       "3        110045  ...     atend expect ach luz ruim nad dificult funcion\n",
+       "4         36929  ...         gost ach fic desej qual fot ach bem melhor\n",
        "\n",
-       "  sentimento                                      frase_tratada  \n",
-       "0   positivo                       smartphon super expect recom  \n",
-       "1   negativo              cheir desagrada pra incomod recomendo  \n",
-       "2   negativo  fiz compr loj entreg produt compr feit carta c...  \n",
-       "3   positivo     atend expect ach luz ruim nad dificult funcion  \n",
-       "4   positivo         gost ach fic desej qual fot ach bem melhor  "
+       "[5 rows x 5 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
